Integration of Github actions and protected branches

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,3 @@
- Testing first release workflow.
-- First change
-- Second change
+- Github Actions (CI/CD) has been integrated with two main worflows: 
+    - compile: check that code compiles properly
+    - release: automatically compiles and creates a release when a tag is marked
